--- a/Basics_of_NLP.ipynb
+++ b/Basics_of_NLP.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOD1oNcG9gZ/+GjOJi3Oa3s",
+      "authorship_tag": "ABX9TyO9oyrHnB6/a0svPsqmM5TR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,12 +28,556 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 66,
       "metadata": {
         "id": "zv83ki235zib"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "text = \"I am vivek chavda\""
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "text.split()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qS52VBQT6l-r",
+        "outputId": "cf711c00-74e2-47f6-aa78-37e2105cd912"
+      },
+      "execution_count": 67,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['I', 'am', 'vivek', 'chavda']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 67
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "'vivek' in text"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ENWnPhra6wBd",
+        "outputId": "11f16699-fe95-4898-cd03-a182135cdd6e"
+      },
+      "execution_count": 68,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 68
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "words = text.split()"
+      ],
+      "metadata": {
+        "id": "aJvsc_NI7Y_x"
+      },
+      "execution_count": 69,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "word = [w.lower() for w in words ]\n",
+        "print(word)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ALxMM1iV7dP0",
+        "outputId": "ba6aba11-d641-467f-a1c9-6685e9458db6"
+      },
+      "execution_count": 70,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['i', 'am', 'vivek', 'chavda']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\" \".join(word)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "id": "zJ7BVGYX7eBw",
+        "outputId": "e9a74c8e-cd3a-45b7-aae2-07040889554b"
+      },
+      "execution_count": 71,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'i am vivek chavda'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 71
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "word = [w.upper() for w in words ]\n",
+        "print(word)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ilSb6QbB7d_K",
+        "outputId": "92b1f5b2-ffcb-4e35-aa3b-e48f18b10177"
+      },
+      "execution_count": 72,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['I', 'AM', 'VIVEK', 'CHAVDA']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#punctuation marks\n",
+        "\n",
+        "import string\n",
+        "string.punctuation"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "id": "lAgi329k7d64",
+        "outputId": "cdbbf6cc-2c08-463a-ec63-30fcb5c8186b"
+      },
+      "execution_count": 73,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'!\"#$%&\\'()*+,-./:;<=>?@[\\\\]^_`{|}~'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 73
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "text[2]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "id": "lz52b4WV7dwQ",
+        "outputId": "6f9a22dc-2ef8-43c5-d2a4-4e8318829d41"
+      },
+      "execution_count": 74,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'a'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 74
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import spacy"
+      ],
+      "metadata": {
+        "id": "cQMcjrwa89lV"
+      },
+      "execution_count": 75,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "nlp = spacy.load('en_core_web_sm')"
+      ],
+      "metadata": {
+        "id": "OaJd92Zo9BMM"
+      },
+      "execution_count": 76,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "doc = nlp(text)"
+      ],
+      "metadata": {
+        "id": "bLukWv9A9BO0"
+      },
+      "execution_count": 77,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "doc"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "oatWS0pr9BSs",
+        "outputId": "cfa5dae2-fe06-483f-e3cd-f24cc941584f"
+      },
+      "execution_count": 78,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "I am vivek chavda"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 78
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(doc)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8RQMGAhv97HT",
+        "outputId": "5c5729c7-cf94-4377-8f59-330266807250"
+      },
+      "execution_count": 79,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "spacy.tokens.doc.Doc"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 79
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "doc[3]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "d1-xE_Dd97Jr",
+        "outputId": "64d2ec24-352a-47d7-d52d-466c96f58405"
+      },
+      "execution_count": 80,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "chavda"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 80
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "text1 = \"I am software developer. I am learning from Marwadi University , Rajkot, India from 11:40AM\""
+      ],
+      "metadata": {
+        "id": "W_7nEtm397Nz"
+      },
+      "execution_count": 81,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#named entity recognition\n",
+        "doc = nlp(text1)"
+      ],
+      "metadata": {
+        "id": "lM8EBtxO97Qb"
+      },
+      "execution_count": 82,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "doc"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "CtEkKC8u_L-7",
+        "outputId": "8a703971-dbce-4a01-be63-a2a31a252645"
+      },
+      "execution_count": 83,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "I am software developer. I am learning from Marwadi University , Rajkot, India from 11:40AM"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 83
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for token in doc.ents:\n",
+        "  print(token.text,token.label_)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QoJjfhPa_MML",
+        "outputId": "00022ec4-c4e3-4089-e12e-6d2696ac03b1"
+      },
+      "execution_count": 84,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Marwadi University ORG\n",
+            "Rajkot GPE\n",
+            "India GPE\n",
+            "11:40AM DATE\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for chunk in doc.noun_chunks:\n",
+        "  print(chunk.text)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bKdJdWUj_MO7",
+        "outputId": "bd483823-7649-4731-831b-151a39938b16"
+      },
+      "execution_count": 85,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "I\n",
+            "software developer\n",
+            "I\n",
+            "Marwadi University\n",
+            "Rajkot\n",
+            "India\n",
+            "11:40AM\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "doc = nlp(\"Red cars do not carry higher insurance rates.\")"
+      ],
+      "metadata": {
+        "id": "uRFlroJr97Sa"
+      },
+      "execution_count": 89,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for chunk in doc.noun_chunks:\n",
+        "    print(chunk.text)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "iStbDe6T97VV",
+        "outputId": "f405a568-e3d3-463c-ce45-5f7d1416860f"
+      },
+      "execution_count": 92,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Red cars\n",
+            "higher insurance rates\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#pos tags: part of speech tags\n",
+        "\n",
+        "import nltk\n",
+        "nltk.download('averaged_perceptron_tagger')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FwzlVoVg97XS",
+        "outputId": "3e2c26f9-fb9e-4fe2-aca2-593bf7fb32a4"
+      },
+      "execution_count": 93,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "[nltk_data] Downloading package averaged_perceptron_tagger to\n",
+            "[nltk_data]     /root/nltk_data...\n",
+            "[nltk_data]   Unzipping taggers/averaged_perceptron_tagger.zip.\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 93
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "text2= \"I am software developer. I am learning from Marwadi University , Rajkot, India from 11:40AM\""
+      ],
+      "metadata": {
+        "id": "_oF0XcLVBmLE"
+      },
+      "execution_count": 95,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "jU_BdmYCBmNk"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "mCyfIBllBmTm"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "kHanQl3-BmV9"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "0T0AZqs9BmYU"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
